Fixing image distortion issue on project pages for tablet

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ a.social_icon:focus img {
   to {opacity: 1}
 }
 
-/* Responsive styling for mobile devices */
+/* Responsive styling for devices smaller than 1200px */
 @media all and (max-width: 1200px) {
   .slideshow-container img {
     max-width: 700px;
@@ -717,9 +717,11 @@ a.social_icon:focus img {
   }
 }
 
+/* Responsive styling for devices smaller than 768px */
 @media only screen and (max-width: 768px), (min-device-width: 500px) and (max-device-width: 768px)  {
   img {
     max-width: 350px;
+    object-fit: cover;
   }
 
   #nv_menu {
@@ -734,6 +736,7 @@ a.social_icon:focus img {
   }
 }
 
+/* Responsive styling for devices smaller than 500px */
 @media all and (max-width: 500px) {
   .artgallery,
   .projects-list,
